4.0.0: Upgrade from Java 8 to Java 11
There were various users of this library which used Java 8. Now this
requirement has been removed so the upgrade can be performed.